--- a/my-react-router-app/package.json
+++ b/my-react-router-app/package.json
@@ -12,6 +12,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/joy": "^5.0.0-beta.52",
+    "@mui/material": "^7.3.1",
+    "@react-router/fs-routes": "^7.7.1",
     "@react-router/node": "^7.7.1",
     "@react-router/serve": "^7.7.1",
     "embla-carousel-auto-scroll": "^8.6.0",
